--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,3 @@
-runtime: python37
-entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
+runtime: python312
+instance_class: F1
+entrypoint: gunicorn -w 1 -k uvicorn.workers.UvicornWorker main:app
